// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remark config > basic snapshot 1`] = `
"---
outline: deep
---

MACOS"
`;

exports[`remark config > basic snapshot 2`] = `
"---
outline: deep
---

MACOS
"
`;
